tests/NormalTests/paczka2/big_fuzzy/29232712.err
Error in line 3: 99E4gnK7qQ S536 68,8
Error in line 14: 8jNr5h S227 75,7
Error in line 6: 99E4gnK7qQ S227 72,6
Error in line 29: ij335KW A824 20,9
Error in line 26: nJNf4GFcQ2 A824 55,7
Error in line 41: hLjVgTQx0ev S536 10,4
Error in line 54: YBZL S227 4,5
Error in line 48: hLjVgTQx0ev A894 17,3
Error in line 63: 8jNr5h A824 40,4
Error in line 68: A824 A824 38,9
Error in line 70: 8jNr5h A894 45,1
Error in line 47: ij335KW S227 196,2
Error in line 82: 99E4gnK7qQ A894 87,0
Error in line 94: hLjVgTQx0ev S227 29,3
Error in line 98: 99E4gnK7qQ A824 38,4
Error in line 95: hLjVgTQx0ev S536 88,4
Error in line 105: 99E4gnK7qQ S536 -5,0
Error in line 109: hLjVgTQx0ev A894 34,7
Error in line 99: 99E4gnK7qQ S536 99,2
Error in line 112: 99E4gnK7qQ S227 45,6
Error in line 111: hLjVgTQx0ev S536 7,0
Error in line 136: YBZL A894 86,7
Error in line 144: ij33
Error in line 145: KW S
Error in line 146: 36 14,8
Error in line 135: 99E4gnK7qQ A894 75,9
Error in line 151: ij335KW S536 652,4
Error in line 168: A824 A824 93,8
Error in line 171: 99E4gnK7qQ S536 81,3
Error in line 166: ij335KW A824 23,1
Error in line 169: hLjVgTQx0ev A824 81,6
Error in line 199: nJNf4GFcQ2 A894 d2,d
Error in line 198: nJNf4GFcQ2 A894 3,3
Error in line 193: hLjVgTQx0ev S536 21,3
Error in line 197: 8jNr5h S227 47,0
Error in line 227: YBZL S227 23,8
Error in line 231: ij335KW A894 82,8
Error in line 229: A824 A824 10,1
Error in line 245: ij335KW S227 14,2
Error in line 203: 99E4gnK7qQ A894 37,2
Error in line 249: nJNf4GFcQ2 SF36 60,2
